--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
       />
       <input type="text" id="pokeFilter" placeholder="Search" maxlength="20" />
       <ul class="poke-list">
-        <li v-for="item in pokemonList" class="poke-list-item">
-          <img
-            v-bind:src="'//serebii.net/pokedex-xy/icon/'+item.number+'.png'"
-            alt=""
-          />
-          <span>{{item.name}} - {{item.number | pokeNumber}}</span>
-        </li>
+        <my-list
+          v-for="item in pokemonList"
+          v-bind:pokemon="item"
+          :key="item.number"
+        ></my-list>
       </ul>
     </div>
 
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="./js/filters.js"></script>
+    <script src="./js/listComponents.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
