--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" id="pokeFilter" placeholder="Search" maxlength="20" />
       <ul class="poke-list">
         <my-list
-          v-for="item in pokemonList"
+          v-for="item in pokeList"
           v-bind:pokemon="item"
           :key="item.number"
         ></my-list>
