--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app">
       <img
+        v-rotate-on-scroll
         class="pokeball-back"
         src="//hanashiro.github.io/pokedex/images/pokeball.svg"
         alt=""
@@ -25,6 +26,7 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="./js/filters.js"></script>
     <script src="./js/listComponents.js"></script>
+    <script src="./js/directive.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
